recursion.cons.lessons.recursion.cons.Nlast.scala.error
nlast:-6: error: Missing closing brace `}' assumed here
try {
^nlast:1: error: expected class or object definition
def nlast(l:List[Int], n:Int): List[Int] = {
^