recursion.cons.lessons.recursion.cons.Nlast.scala.code
def nlast(l:List[Int], n:Int): List[Int] = {

if(n == 0) return Nil
if(n == l.length) return l
return nLast(l.tail, n)